--- a/style.css
+++ b/style.css
@@ -1,4 +1,51 @@
 canvas {
-    border-radius: 16px;
-    border: 8px solid black;
+    border-radius: 5px;
+    border: 1px solid black;
+}
+
+html {
+    background-color: rgb(172, 255, 172);
+    font-family: monospace;
+    font-weight: 600;
+}
+
+body, div {
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+div > * {
+    margin: 8px;
+}
+
+div {
+    border-radius: 5px;
+    background-color: rgba(255, 255, 255, 0.836);
+    padding: 16px;
+    margin: 8px auto;
+}
+
+button {
+    background: #2196F3;
+    transition-duration: 0.4s;
+    text-decoration: none;
+    color: white;
+    font-size: 0.75rem;
+    font-family: monospace;
+    font-weight: 600;
+    border-radius: 56px;
+    border: none;
+    padding: 8px;
+}
+
+button:hover {
+    mix-blend-mode: normal;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+button:active {
+    transform: scale(0.9, 0.9);
 }
