--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ div {
     background-color: rgba(255, 255, 255, 0.836);
     padding: 16px;
     margin: 8px auto;
+    max-width: 50%;
 }
 
 button {
